--- a/microservice-application/src/main/resources/application.yml
+++ b/microservice-application/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  messages:
+    basename: i18n/messages
+    encoding: UTF-8
+
   jpa:
     hibernate:
       ddl-auto: validate
